--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.healthy">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_size"
@@ -9,7 +11,17 @@
         android:roundIcon="@drawable/logo_size"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangeProfileActivity"></activity>
+        <activity
+            android:name=".MpesaPinActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ConsultantActivity"
+            android:exported="true" />
+        <activity android:name=".VisaActivity" />
+        <activity android:name=".AirtelActivity" />
+        <activity android:name=".MpesaActivity" />
+        <activity android:name=".PaymentActivity" />
+        <activity android:name=".ChangeProfileActivity" />
         <activity android:name=".GetStartedActivity" />
         <activity android:name=".SlideActivity" />
         <activity android:name=".PhoneActivity" />
